Prevent editable link from collapsing teaser items
Generally, wrapping an element in an editable link should not change
percentage sizes relative to its previous containing block.

REDMINE-20852, REDMINE-20896

--- a/entry_types/scrolled/package/src/contentElements/externalLinkList/frontend/ExternalLink.module.css
+++ b/entry_types/scrolled/package/src/contentElements/externalLinkList/frontend/ExternalLink.module.css
@@ -16,16 +16,6 @@
   text-decoration: none;
 }
 
-/*
-  Ensure divs rendered by EditableLink in editor span full height. In
-  published entry, items without link directly render the card inside
-  the item.
-*/
-.item > div:not(.card),
-.item > div:not(.card) > div {
-  height: 100%;
-}
-
 .outlined::before {
   content: "";
   display: block;
