--- a/entry_types/scrolled/package/src/frontend/inlineEditing/EditableLink.module.css
+++ b/entry_types/scrolled/package/src/frontend/inlineEditing/EditableLink.module.css
@@ -1,3 +1,8 @@
 .wrapper {
   position: relative;
+  height: 100%;
+}
+
+.wrapper > div {
+  height: 100%;
 }
